sample Dot install

--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello World!!
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="ジェイ・ケイコーポレーション" />
+  <meta property="og:title" content="ジェイ・ケイコーポレーション" />
+  <meta property="og:description" content="住まい、宿泊、レンタルスペースの事ならお任せください！" />
+  <meta property="og:url" content="https://dryeyerhythm.jp/" />
+  <title>ジェイ・ケイコーポレーション</title>
+</head>
+<body>
+  <header>
+    <div class="container">
+    <h1>エポックハウス</h1>
+  </header>
+
+  <section class="features">
+    <h2>Features</h2>
+    <div class="container">
+      <div class="item">
+        <img src="img/estate.png">
+        <p class="pull-right">Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello</p>
+      </div>
+      <div class="item">
+        <img src="img/estate.png">
+        <p class="pull-left">Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello</p>
+      </div>
+      <div class="item">
+        <img src="img/estate.png">
+        <p class="pull-right">Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="news">
+    <h2>News</h2>
+    <div class="container">
+      <div class="item">
+        <img src="img/vacation_rental.png">
+        <p>Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello</p>
+      </div>
+      <div class="item">
+        <img src="img/vacation_rental.png">
+        <p>Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello</p>
+      </div>
+      <div class="item">
+        <img src="img/vacation_rental.png">
+        <p>Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+    </div>
+    <small>Copyright (c) 2018 JK Corporation All rights reserved.</small>
+  </footer>
+</body>
+</html>
