--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="お住い、宿泊、レンタルスペースの事ならお任せください！">
 <meta name="keywords" content="小倉,賃貸,売買,民泊,貸事務所,レンタルスペース">
-<link rel="stylesheet" href="css/slide.css">
 <link rel="stylesheet" href="css/style.css">
 <script type="text/javascript" src="js/openclose.js"></script>
 <!--[if lt IE 9]>
@@ -16,16 +15,16 @@
 <![endif]-->
 </head>
 
-<body>
+<body class="s-n">
 
 <div id="container">
 
-<header>
-<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="エポックハウス"></a></h1>
-<div id="contact">
-<p class="tel">TEL:093-551-6633<span>受付：9:00〜18:00　定休日：水曜日</span></p>
-</div>
-</header>
+	<header>
+	<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="エポックハウス"></a></h1>
+	<div id="contact">
+	<p class="tel">TEL:093-551-6633<span>受付：9:00〜18:00　定休日：水曜日</span></p>
+	</div>
+	</header>
 
 <!--小さな端末用（800px以下端末）メニュー-->
 <nav id="menubar-s">
@@ -53,92 +52,41 @@
 </ul>
 </nav>
 
-<!--メインイメージ-->
-<aside id="mainimg">
-<img src="images/1.jpg" alt="" id="slide0">
-<img src="images/1.jpg" alt="" id="slide1">
-<img src="images/2.jpg" alt="" id="slide2">
-<img src="images/3.jpg" alt="" id="slide3">
-</aside>
-
 <div id="main">
 
-<section id="new">
-<h2 id="newinfo_hdr" class="close">更新情報・お知らせ</h2>
-<dl id="newinfo">
-<dt>2018/6/15</dt>
-<dd>Webサイトをリニューアルしました！<span class="newicon">NEW</span></dd>
-<!-- <dt>20XX/00/00</dt>
-<dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd> -->
-</dl>
+<section>
+
+<h2>お問い合わせ</h2>
+<!-- <p>当ページと同じ３項目のお問い合わせフォーム（自動フォーム試用版）を簡単に使えるようにセットしています。<br>
+<span style="color: red;">※当ページ（contact.html）はフォームの見本ページです。実際の自動フォームには使いませんのでご注意下さい。</span></p>
+<p><strong class="color1">■自動フォームを使う場合（※編集に入る前にご確認下さい）</strong><br>
+あなたのメールアドレス設定と、簡単な編集だけで使えます。<a href="https://template-party.com/file/formgen_manual_set2.html" target="_blank">こちらのマニュアルをご覧下さい。</a></p>
+<p><strong class="color1">■自動フォームを使わない場合</strong><br>
+テンプレートに梱包されている「form.html」「confirm.html」「finish.html」の3枚のファイルを削除して下さい。</p> -->
+
+<table class="ta1">
+<tr>
+<th>お名前※</th>
+<td><input type="text" name="お名前" size="30" class="ws"></td>
+</tr>
+<tr>
+<th>メールアドレス※</th>
+<td><input type="text" name="メールアドレス" size="30" class="ws"></td>
+</tr>
+<tr>
+<th>お問い合わせ詳細※</th>
+<td><textarea name="お問い合わせ詳細" cols="30" rows="10" class="wl"></textarea></td>
+</tr>
+</table>
+
+<p class="c">
+<input type="submit" value="内容を確認する">
+</p>
+
 </section>
 
 </div>
 <!--/main-->
-
-<div id="sub">
-
-<!-- <section>
-
-<h2>おすすめ物件情報</h2>
-
-<div class="list">
-<a href="item.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>物件タイトル<span class="newicon">NEW</span></h4>
-<p>所在地：東京都XXXX<br>
-価格：XXXXX円</p>
-</a>
-</div>
-
-<div class="list">
-<a href="item.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>物件タイトル</h4>
-<p>所在地：東京都XXXX<br>
-価格：XXXXX円</p>
-</a>
-</div>
-
-<div class="list">
-<a href="item.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>物件タイトル</h4>
-<p>所在地：東京都XXXX<br>
-価格：XXXXX円</p>
-</a>
-</div>
-
-<div class="list">
-<a href="item.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>物件タイトル</h4>
-<p>所在地：東京都XXXX<br>
-価格：XXXXX円</p>
-</a>
-</div>
-
-<div class="list option2">
-<a href="item.html">
-<figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
-<h4>物件タイトル</h4>
-<p>所在地：東京都XXXX<br>
-価格：XXXXX円</p>
-<span class="option2">ご契約済</span>
-</a>
-</div>
-
-</section> -->
-
-<h2>Access</h2>
-<div class="box1">
-<strong>TEL:093-551-6633</strong><br>
-<span class="mini1">受付：9:00〜18:00<br>
-定休日：水曜日</span>
-</div>
-
-</div>
-<!--/sub-->
 
 <p id="pagetop"><a href="#">↑</a></p>
 
