--- a/baibai.html
+++ b/baibai.html
@@ -25,15 +25,15 @@
 	<p class="tel">TEL:093-551-6633<span>受付：9:00〜18:00　定休日：水曜日</span></p>
 	</div>
 	</header>
-
 	<!--小さな端末用（800px以下端末）メニュー-->
 	<nav id="menubar-s">
 	<ul>
 	<li><a href="index.html">ホーム<span>HOME</span></a></li>
+	<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 	<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
 	<li><a href="chintai.html">賃貸物件<span>CHINTAI</span></a></li>
 	<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
-	<li><a href="rental_space.html">レンタルスペース<span>SPACE</span></a></li>
+	<!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE</span></a></li> -->
 	<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
 	</ul>
 	</nav>
@@ -44,10 +44,11 @@
 	<nav id="menubar">
 	<ul>
 	<li><a href="index.html">ホーム<span>HOME</span></a></li>
+	<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 	<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
 	<li><a href="chintai.html">賃貸物件<span>CHINTAI</span></a></li>
 	<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
-	<li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li>
+	<!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li> -->
 	<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
 	</ul>
 	</nav>
