--- a/company.html
+++ b/company.html
@@ -26,31 +26,33 @@
 </div>
 </header>
 
-	<!--小さな端末用（800px以下端末）メニュー-->
-	<nav id="menubar-s">
-	<ul>
-	<li><a href="index.html">ホーム<span>HOME</span></a></li>
-	<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
-	<li><a href="chintai.html">賃貸物件<span>CHINTAI</span></a></li>
-	<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
-	<li><a href="rental_space.html">レンタルスペース<span>SPACE</span></a></li>
-	<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-	</ul>
-	</nav>
+<!--小さな端末用（800px以下端末）メニュー-->
+<nav id="menubar-s">
+<ul>
+<li><a href="index.html">ホーム<span>HOME</span></a></li>
+<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
+<li><a href="chintai.html">賃貸物件<span>CHINTAI</span></a></li>
+<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
+<!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE</span></a></li> -->
+<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+</ul>
+</nav>
 
-	<div id="contents">
+<div id="contents">
 
-	<!--PC用（801px以上端末）メニュー-->
-	<nav id="menubar">
-	<ul>
-	<li><a href="index.html">ホーム<span>HOME</span></a></li>
-	<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
-	<li><a href="chintai.html">賃貸物件<span>CHINTAI</span></a></li>
-	<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
-	<li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li>
-	<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-	</ul>
-	</nav>
+<!--PC用（801px以上端末）メニュー-->
+<nav id="menubar">
+<ul>
+<li><a href="index.html">ホーム<span>HOME</span></a></li>
+<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
+<li><a href="chintai.html">賃貸物件<span>CHINTAI</span></a></li>
+<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
+<!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li> -->
+<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+</ul>
+</nav>
 
 <div id="main">
 
