Add email in contact

--- a/company.html
+++ b/company.html
@@ -74,7 +74,7 @@
 		</tr>
 		<tr>
 		<th>連絡先</th>
-		<td>TEL: 093-551-6633 FAX: 093-967-8500</td>
+		<td>TEL: 093-551-6633 FAX: 093-967-8500 Email: info@jk-corp.work</td>
 		</tr>
 		<tr>
 		<th>不動産営業許可番号</th>
