--- a/chintai.html
+++ b/chintai.html
@@ -13,6 +13,15 @@
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120049717-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120049717-1');
+</script>
 </head>
 
 <body>
@@ -53,7 +62,7 @@
 	<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
 	</ul>
 	</nav>
-	
+
 <div id="main">
 
 <section>
