move link chintai to homes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <li><a href="index.html">ホーム<span>HOME</span></a></li>
 <li><a href="company.html">会社概要<span>COMPANY</span></a></li>
 <li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
-<li><a href="chintai.html">賃貸物件<span>CHINTAI</span></a></li>
+<li><a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/">賃貸物件<span>CHINTAI</span></a></li>
 <li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
 <!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li> -->
 <li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
