--- a/company.html
+++ b/company.html
@@ -104,11 +104,11 @@
 	</tr>
 	<tr>
 	<th>東京支社</th>
-	<td>〒104-0045　東京都中央区築地７−１８−２８−１１３５</td>
+	<td>〒135-0051　東京都江東区枝川２−２８−１０−２０６</td>
 	</tr>
 	<tr>
 	<th>地図</th>
-	<td><a href="https://goo.gl/maps/3eUjeUiFeKE2"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.4893414919543!2d139.7742198154197!3d35.66495118019812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188963a0cef667%3A0xf7bc1c05bc69487c!2z44CSMTA0LTAwNDUg5p2x5Lqs6YO95Lit5aSu5Yy656-J5Zyw77yX5LiB55uu77yR77yY4oiS77yS77yY!5e0!3m2!1sja!2sjp!4v1526802746329" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<td><a href="https://goo.gl/maps/3eUjeUiFeKE2"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1620.9192976393813!2d139.8073786584302!3d35.65634808968435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601889b1f7b9cddd%3A0x28660f28f4573ba2!2z44Ki44Kv44Ki44Oe44O844Kv44K5!5e0!3m2!1sja!2sjp!4v1538922506745" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</a></td>
 	</tr>
 </table>
