--- a/index.html
+++ b/index.html
@@ -169,8 +169,11 @@
 	<ul>
 	<li><a href="vacation_rental.html">民泊物件</a></li>
 	</ul>
-	<ul>
+  <ul>
 	<li><a href="rental_space.html">レンタルスペース</a></li>
+	</ul>
+  <ul>
+	<li><a href="legal.html">特商取引に基づく表記</a></li>
 	</ul>
 </div>
 <!--/footermenu-->
