--- a/legal.html
+++ b/legal.html
@@ -98,7 +98,7 @@
 </tr>
 <tr>
   <th>代金の支払い方法・時期</th>
-  <td>・クレジットカード・銀行振込・LINE Pay</td>
+  <td>支払い方法：<br>・クレジットカード、銀行振込、LINE Pay<br>支払い時期：<br>・各レンタルスペース及びご利用方法によって異なります。各レンタルスペースページにて事前にご確認ください。</td>
 </tr>
 <tr>
   <th>レンタルスペース利用料金以外の費用</th>
