--- a/company.html
+++ b/company.html
@@ -104,7 +104,7 @@
 	</tr>
 	<tr>
 	<th>東京支社</th>
-	<td>〒135-0051　東京都江東区枝川２−２８−１０−２０６</td>
+	<td>〒160-0022　東京都新宿区新宿５−１７−６−４F</td>
 	</tr>
 	<tr>
 	<th>地図</th>
