update tokyo branch

--- a/company.html
+++ b/company.html
@@ -108,8 +108,7 @@
 	</tr>
 	<tr>
 	<th>地図</th>
-	<td><a href="https://goo.gl/maps/3eUjeUiFeKE2"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1620.9192976393813!2d139.8073786584302!3d35.65634808968435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601889b1f7b9cddd%3A0x28660f28f4573ba2!2z44Ki44Kv44Ki44Oe44O844Kv44K5!5e0!3m2!1sja!2sjp!4v1538922506745" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-	</a></td>
+	<td><a href="https://goo.gl/maps/3eUjeUiFeKE2"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.347937710944!2d139.7036477152591!3d35.6930545801916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cdbf20f957f%3A0x11656a9106467900!2z44CSMTYwLTAwMjIgVMWNa3nFjS10bywgU2hpbmp1a3UgQ2l0eSwgU2hpbmp1a3UsIDUtY2jFjW1l4oiSMTfiiJI2IOaWsOWuv-S4ieWFieeUuuODj-OCpOODoA!5e0!3m2!1sen!2sjp!4v1575101265688!5m2!1sen!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe></a></td>
 	</tr>
 </table>
 
