--- a/company.html
+++ b/company.html
@@ -79,7 +79,7 @@
 		</tr>
 		<tr>
 		<th>資本金</th>
-		<td>1000万</td>
+		<td>５００万</td>
 		</tr>
 		<tr>
 		<th>連絡先</th>
@@ -95,7 +95,7 @@
 		</tr>
 		<tr>
 		<th>本社</th>
-		<td>〒802-0043　福岡県北九州市小倉北区足原1丁目5-9</td>
+		<td>〒802-0043　福岡県北九州市小倉北区足原1丁目5-9メゾン妙見202</td>
 		</tr>
 	<tr>
 	<th>地図</th>
@@ -104,7 +104,7 @@
 	</tr>
 	<tr>
 	<th>東京支社</th>
-	<td>〒160-0022　東京都新宿区新宿５−１７−６−４F</td>
+	<td>〒160-0022　東京都新宿区新宿５−１７−６新宿三光町ハイム４F</td>
 	</tr>
 	<tr>
 	<th>地図</th>
