--- a/contact.html
+++ b/contact.html
@@ -1,154 +1,231 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>ジェイ・ケイコーポレーション</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="お住い、宿泊、レンタルスペースの事ならお任せください！">
-<meta name="keywords" content="小倉,賃貸,売買,民泊,貸事務所,レンタルスペース">
-<link rel="stylesheet" href="css/style.css">
-<script type="text/javascript" src="js/openclose.js"></script>
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120049717-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>ジェイ・ケイコーポレーション</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="お住い、宿泊、レンタルスペースの事ならお任せください！"
+    />
+    <meta
+      name="keywords"
+      content="小倉,賃貸,売買,民泊,貸事務所,レンタルスペース"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script type="text/javascript" src="js/openclose.js"></script>
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-120049717-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'UA-120049717-1');
-</script>
-</head>
+      gtag("config", "UA-120049717-1");
+    </script>
+  </head>
 
-<body class="s-n">
+  <body class="s-n">
+    <div id="container">
+      <header>
+        <h1 id="logo">
+          <a href="index.html"
+            ><img src="images/logo.png" alt="エポックハウス"
+          /></a>
+        </h1>
+        <div id="contact">
+          <p class="tel">
+            TEL:093-551-6633<span>受付：9:00〜18:00　定休日：水曜日</span>
+          </p>
+        </div>
+      </header>
 
-<div id="container">
+      <!--小さな端末用（800px以下端末）メニュー-->
+      <nav id="menubar-s">
+        <ul>
+          <li>
+            <a href="index.html">ホーム<span>HOME</span></a>
+          </li>
+          <li>
+            <a href="company.html">会社概要<span>COMPANY</span></a>
+          </li>
+          <li>
+            <a href="baibai.html">売買物件<span>BAIBAI</span></a>
+          </li>
+          <li>
+            <a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/"
+              >賃貸物件<span>CHINTAI</span></a
+            >
+          </li>
+          <li>
+            <a href="vacation_rental.html"
+              >民泊物件<span>VACATION RENTAL</span></a
+            >
+          </li>
+          <!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE</span></a></li> -->
+          <li>
+            <a href="contact.html">お問い合わせ<span>CONTACT</span></a>
+          </li>
+        </ul>
+      </nav>
 
-	<header>
-	<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="エポックハウス"></a></h1>
-	<div id="contact">
-	<p class="tel">TEL:093-551-6633<span>受付：9:00〜18:00　定休日：水曜日</span></p>
-	</div>
-	</header>
+      <div id="contents">
+        <!--PC用（801px以上端末）メニュー-->
+        <nav id="menubar">
+          <ul>
+            <li>
+              <a href="index.html">ホーム<span>HOME</span></a>
+            </li>
+            <li>
+              <a href="company.html">会社概要<span>COMPANY</span></a>
+            </li>
+            <li>
+              <a href="baibai.html">売買物件<span>BAIBAI</span></a>
+            </li>
+            <li>
+              <a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/"
+                >賃貸物件<span>CHINTAI</span></a
+              >
+            </li>
+            <li>
+              <a href="vacation_rental.html"
+                >民泊物件<span>VACATION RENTAL</span></a
+              >
+            </li>
+            <!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li> -->
+            <li>
+              <a href="contact.html">お問い合わせ<span>CONTACT</span></a>
+            </li>
+          </ul>
+        </nav>
 
-	<!--小さな端末用（800px以下端末）メニュー-->
-	<nav id="menubar-s">
-	<ul>
-	<li><a href="index.html">ホーム<span>HOME</span></a></li>
-	<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-	<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
-	<li><a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/">賃貸物件<span>CHINTAI</span></a></li>
-	<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
-	<!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE</span></a></li> -->
-	<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-	</ul>
-	</nav>
-
-	<div id="contents">
-
-	<!--PC用（801px以上端末）メニュー-->
-	<nav id="menubar">
-	<ul>
-	<li><a href="index.html">ホーム<span>HOME</span></a></li>
-	<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
-	<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
-	<li><a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/">賃貸物件<span>CHINTAI</span></a></li>
-	<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
-	<!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li> -->
-	<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
-	</ul>
-	</nav>
-
-<div id="main">
-
-<section>
-
-<h2>お問い合わせ</h2>
-<!-- <p>当ページと同じ３項目のお問い合わせフォーム（自動フォーム試用版）を簡単に使えるようにセットしています。<br>
+        <div id="main">
+          <section>
+            <h2>お問い合わせ</h2>
+            <!-- <p>当ページと同じ３項目のお問い合わせフォーム（自動フォーム試用版）を簡単に使えるようにセットしています。<br>
 <span style="color: red;">※当ページ（contact.html）はフォームの見本ページです。実際の自動フォームには使いませんのでご注意下さい。</span></p>
 <p><strong class="color1">■自動フォームを使う場合（※編集に入る前にご確認下さい）</strong><br>
 あなたのメールアドレス設定と、簡単な編集だけで使えます。<a href="https://template-party.com/file/formgen_manual_set2.html" target="_blank">こちらのマニュアルをご覧下さい。</a></p>
 <p><strong class="color1">■自動フォームを使わない場合</strong><br>
 テンプレートに梱包されている「form.html」「confirm.html」「finish.html」の3枚のファイルを削除して下さい。</p> -->
 
-<table class="ta1">
-<tr>
-<th>お名前※</th>
-<td><input type="text" name="お名前" size="30" class="ws"></td>
-</tr>
-<tr>
-<th>メールアドレス※</th>
-<td><input type="text" name="メールアドレス" size="30" class="ws"></td>
-</tr>
-<tr>
-<th>お問い合わせ詳細※</th>
-<td><textarea name="お問い合わせ詳細" cols="30" rows="10" class="wl"></textarea></td>
-</tr>
-</table>
+            <!-- <table class="ta1">
+              <tr>
+                <th>お名前※</th>
+                <td>
+                  <input type="text" name="お名前" size="30" class="ws" />
+                </td>
+              </tr>
+              <tr>
+                <th>メールアドレス※</th>
+                <td>
+                  <input
+                    type="text"
+                    name="メールアドレス"
+                    size="30"
+                    class="ws"
+                  />
+                </td>
+              </tr>
+              <tr>
+                <th>お問い合わせ詳細※</th>
+                <td>
+                  <textarea
+                    name="お問い合わせ詳細"
+                    cols="30"
+                    rows="10"
+                    class="wl"
+                  ></textarea>
+                </td>
+              </tr>
+            </table>
 
-<p class="c">
-<input type="submit" value="内容を確認する">
-</p>
+            <p class="c">
+              <input type="submit" value="内容を確認する" />
+            </p> -->
+            <p>
+              JK Room
+              LINE公式アカウントはじめました！問い合わせはLINEからお願いします。
+            </p>
+            <img
+              src="https://qr-official.line.me/sid/M/023ldwhd.png?shortenUrl=true"
+            />
+            <a href="https://lin.ee/oC8BbDj"
+              ><img
+                src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"
+                alt="友だち追加"
+                height="36"
+            /></a>
+          </section>
+        </div>
+        <!--/main-->
 
-</section>
+        <p id="pagetop"><a href="#">↑</a></p>
 
-</div>
-<!--/main-->
+        <footer>
+          <div id="footermenu">
+            <ul>
+              <li><a href="#">ホーム</a></li>
+            </ul>
+            <ul>
+              <li><a href="baibai.html">売買物件</a></li>
+            </ul>
+            <ul>
+              <li><a href="chintai.html">賃貸物件</a></li>
+            </ul>
+            <ul>
+              <li><a href="vacation_rental.html">民泊物件</a></li>
+            </ul>
+            <ul>
+              <li><a href="rental_space.html">レンタルスペース</a></li>
+            </ul>
+          </div>
+          <!--/footermenu-->
 
-<p id="pagetop"><a href="#">↑</a></p>
+          <div id="copyright">
+            <small
+              >Copyright&copy;
+              <a href="index.html">株式会社ジェイ・ケイコーポレーション</a> All
+              Rights Reserved.</small
+            >
+            <span class="pr"
+              ><a href="http://template-party.com/" target="_blank"
+                >《Web Design:Template-Party》</a
+              ></span
+            >
+          </div>
+        </footer>
+      </div>
+      <!--/contents-->
+    </div>
+    <!--/container-->
 
-<footer>
+    <!--スマホ用更新情報　800px以下-->
+    <script type="text/javascript">
+      if (OCwindowWidth() <= 800) {
+        open_close("newinfo_hdr", "newinfo");
+      }
+    </script>
 
-<div id="footermenu">
-	<ul>
-	<li><a href="#">ホーム</a></li>
-	</ul>
-	<ul>
-	<li><a href="baibai.html">売買物件</a></li>
-	</ul>
-	<ul>
-	<li><a href="chintai.html">賃貸物件</a></li>
-	</ul>
-	<ul>
-	<li><a href="vacation_rental.html">民泊物件</a></li>
-	</ul>
-	<ul>
-	<li><a href="rental_space.html">レンタルスペース</a></li>
-	</ul>
-</div>
-<!--/footermenu-->
-
-<div id="copyright">
-<small>Copyright&copy; <a href="index.html">株式会社ジェイ・ケイコーポレーション</a> All Rights Reserved.</small>
-<span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
-</div>
-
-</footer>
-
-</div>
-<!--/contents-->
-
-</div>
-<!--/container-->
-
-<!--スマホ用更新情報　800px以下-->
-<script type="text/javascript">
-if (OCwindowWidth() <= 800) {
-	open_close("newinfo_hdr", "newinfo");
-}
-</script>
-
-<!--メニューの３本バー-->
-<div id="menubar_hdr" class="close"><span></span><span></span><span></span></div>
-<!--メニューの開閉処理条件設定　800px以下-->
-<script type="text/javascript">
-if (OCwindowWidth() <= 800) {
-	open_close("menubar_hdr", "menubar-s");
-}
-</script>
-</body>
+    <!--メニューの３本バー-->
+    <div id="menubar_hdr" class="close">
+      <span></span><span></span><span></span>
+    </div>
+    <!--メニューの開閉処理条件設定　800px以下-->
+    <script type="text/javascript">
+      if (OCwindowWidth() <= 800) {
+        open_close("menubar_hdr", "menubar-s");
+      }
+    </script>
+  </body>
 </html>
