--- a/rental_space.html
+++ b/rental_space.html
@@ -1,126 +1,76 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>ジェイ・ケイコーポレーション</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="お住い、宿泊、レンタルスペースの事ならお任せください！"
-    />
-    <meta
-      name="keywords"
-      content="小倉,賃貸,売買,民泊,貸事務所,レンタルスペース"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <script type="text/javascript" src="js/openclose.js"></script>
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-120049717-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>ジェイ・ケイコーポレーション</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="お住い、宿泊、レンタルスペースの事ならお任せください！">
+<meta name="keywords" content="小倉,賃貸,売買,民泊,貸事務所,レンタルスペース">
+<link rel="stylesheet" href="css/style.css">
+<script type="text/javascript" src="js/openclose.js"></script>
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120049717-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag("config", "UA-120049717-1");
-    </script>
-  </head>
+  gtag('config', 'UA-120049717-1');
+</script>
+</head>
 
-  <body>
-    <div id="container">
-      <header>
-        <h1 id="logo">
-          <a href="index.html"
-            ><img src="images/logo.png" alt="エポックハウス"
-          /></a>
-        </h1>
-        <div id="contact">
-          <p class="tel">
-            TEL:093-551-6633<span>受付：9:00〜18:00　定休日：水曜日</span>
-          </p>
-        </div>
-      </header>
+<body>
 
-      <!--小さな端末用（800px以下端末）メニュー-->
-      <nav id="menubar-s">
-        <ul>
-          <li>
-            <a href="index.html">ホーム<span>HOME</span></a>
-          </li>
-          <li>
-            <a href="company.html">会社概要<span>COMPANY</span></a>
-          </li>
-          <li>
-            <a href="baibai.html">売買物件<span>BAIBAI</span></a>
-          </li>
-          <li>
-            <a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/"
-              >賃貸物件<span>CHINTAI</span></a
-            >
-          </li>
-          <li>
-            <a href="vacation_rental.html"
-              >民泊物件<span>VACATION RENTAL</span></a
-            >
-          </li>
-          <!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE</span></a></li> -->
-          <li>
-            <a href="contact.html">お問い合わせ<span>CONTACT</span></a>
-          </li>
-        </ul>
-      </nav>
+<div id="container">
 
-      <div id="contents">
-        <!--PC用（801px以上端末）メニュー-->
-        <nav id="menubar">
-          <ul>
-            <li>
-              <a href="index.html">ホーム<span>HOME</span></a>
-            </li>
-            <li>
-              <a href="company.html">会社概要<span>COMPANY</span></a>
-            </li>
-            <li>
-              <a href="baibai.html">売買物件<span>BAIBAI</span></a>
-            </li>
-            <li>
-              <a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/"
-                >賃貸物件<span>CHINTAI</span></a
-              >
-            </li>
-            <li>
-              <a href="vacation_rental.html"
-                >民泊物件<span>VACATION RENTAL</span></a
-              >
-            </li>
-            <!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li> -->
-            <li>
-              <a href="contact.html">お問い合わせ<span>CONTACT</span></a>
-            </li>
-          </ul>
-        </nav>
+<header>
+<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="エポックハウス"></a></h1>
+<div id="contact">
+<p class="tel">TEL:093-551-6633<span>受付：9:00〜18:00　定休日：水曜日</span></p>
+</div>
+</header>
 
-        <div id="main">
-          <section>
-            <h2>スペイシーにて掲載開始しました</h2>
-            <p>
-              株式会社 ジェイ・ケイコーポレイション
-              のレンタルスペースは、予約サイト「スペイシー」でご予約が可能です。
-              レンタルスペースの「SPACEE
-              スペイシー」は、下記サイトからご利用下さい。
-              https://www.spacee.jp/
-            </p>
+<!--小さな端末用（800px以下端末）メニュー-->
+<nav id="menubar-s">
+<ul>
+<li><a href="index.html">ホーム<span>HOME</span></a></li>
+<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
+<li><a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/">賃貸物件<span>CHINTAI</span></a></li>
+<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
+<!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE</span></a></li> -->
+<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+</ul>
+</nav>
 
-            <!-- <div class="list">
+<div id="contents">
+
+<!--PC用（801px以上端末）メニュー-->
+<nav id="menubar">
+<ul>
+<li><a href="index.html">ホーム<span>HOME</span></a></li>
+<li><a href="company.html">会社概要<span>COMPANY</span></a></li>
+<li><a href="baibai.html">売買物件<span>BAIBAI</span></a></li>
+<li><a href="https://www.homes.co.jp/realtor/mid-121822hNDrQk0jSoLs/">賃貸物件<span>CHINTAI</span></a></li>
+<li><a href="vacation_rental.html">民泊物件<span>VACATION RENTAL</span></a></li>
+<!-- <li><a href="rental_space.html">レンタルスペース<span>SPACE </span></a></li> -->
+<li><a href="contact.html">お問い合わせ<span>CONTACT</span></a></li>
+</ul>
+</nav>
+
+<div id="main">
+
+<section>
+
+<h2>レンタルスペース</h2>
+<p>ただいま準備中</p>
+
+<!-- <div class="list">
 <a href="item.html">
 <h4>物件タイトル<span class="newicon">NEW</span></h4>
 <figure><img src="images/sample1.jpg" alt="写真の説明"></figure>
@@ -201,7 +151,7 @@
 </a>
 </div> -->
 
-            <!-- <h2>駐車場物件（コンパクトレイアウト）</h2>
+<!-- <h2>駐車場物件（コンパクトレイアウト）</h2>
 <p>上の横長レイアウトは&lt;section class=&quot;list&quot;&gt;ですが、&lt;section class=&quot;list <span style="color:red">compact</span>&quot;&gt;にするとこのようにコンパクトボックスになります。html構成はそれぞれ異なります。</p>
 
 <div class="list compact">
@@ -294,66 +244,62 @@
 価格：XXXXX円</p>
 </a>
 </div> -->
-          </section>
-        </div>
-        <!--/main-->
 
-        <p id="pagetop"><a href="#">↑</a></p>
+</section>
 
-        <footer>
-          <div id="footermenu">
-            <ul>
-              <li><a href="#">ホーム</a></li>
-            </ul>
-            <ul>
-              <li><a href="baibai.html">売買物件</a></li>
-            </ul>
-            <ul>
-              <li><a href="chintai.html">賃貸物件</a></li>
-            </ul>
-            <ul>
-              <li><a href="vacation_rental.html">民泊物件</a></li>
-            </ul>
-            <ul>
-              <li><a href="rental_space.html">レンタルスペース</a></li>
-            </ul>
-          </div>
-          <!--/footermenu-->
+</div>
+<!--/main-->
 
-          <div id="copyright">
-            <small
-              >Copyright&copy;
-              <a href="index.html">株式会社ジェイ・ケイコーポレーション</a> All
-              Rights Reserved.</small
-            >
-            <span class="pr"
-              ><a href="http://template-party.com/" target="_blank"
-                >《Web Design:Template-Party》</a
-              ></span
-            >
-          </div>
-        </footer>
-      </div>
-      <!--/contents-->
-    </div>
-    <!--/container-->
+<p id="pagetop"><a href="#">↑</a></p>
 
-    <!--スマホ用更新情報　800px以下-->
-    <script type="text/javascript">
-      if (OCwindowWidth() <= 800) {
-        open_close("newinfo_hdr", "newinfo");
-      }
-    </script>
+<footer>
 
-    <!--メニューの３本バー-->
-    <div id="menubar_hdr" class="close">
-      <span></span><span></span><span></span>
-    </div>
-    <!--メニューの開閉処理条件設定　800px以下-->
-    <script type="text/javascript">
-      if (OCwindowWidth() <= 800) {
-        open_close("menubar_hdr", "menubar-s");
-      }
-    </script>
-  </body>
+	<div id="footermenu">
+		<ul>
+		<li><a href="#">ホーム</a></li>
+		</ul>
+		<ul>
+		<li><a href="baibai.html">売買物件</a></li>
+		</ul>
+		<ul>
+		<li><a href="chintai.html">賃貸物件</a></li>
+		</ul>
+		<ul>
+		<li><a href="vacation_rental.html">民泊物件</a></li>
+		</ul>
+		<ul>
+		<li><a href="rental_space.html">レンタルスペース</a></li>
+		</ul>
+	</div>
+<!--/footermenu-->
+
+<div id="copyright">
+<small>Copyright&copy; <a href="index.html">株式会社ジェイ・ケイコーポレーション</a> All Rights Reserved.</small>
+<span class="pr"><a href="http://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
+</div>
+
+</footer>
+
+</div>
+<!--/contents-->
+
+</div>
+<!--/container-->
+
+<!--スマホ用更新情報　800px以下-->
+<script type="text/javascript">
+if (OCwindowWidth() <= 800) {
+	open_close("newinfo_hdr", "newinfo");
+}
+</script>
+
+<!--メニューの３本バー-->
+<div id="menubar_hdr" class="close"><span></span><span></span><span></span></div>
+<!--メニューの開閉処理条件設定　800px以下-->
+<script type="text/javascript">
+if (OCwindowWidth() <= 800) {
+	open_close("menubar_hdr", "menubar-s");
+}
+</script>
+</body>
 </html>
